objects/ERP_Currency_Daily_Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Counter__c</fullName>
        <label>Approval Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Conversion_rate__c</fullName>
        <label>Average Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Conversion_Rate__c</fullName>
        <label>BS Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blackout_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blackout Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONVERSION_RATE__c</fullName>
        <label>Conversion Rate</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Currency_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERP Currency Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXCHANGE_RATE_TYPE__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAILY</fullName>
                    <label>Daily Spot Rate</label>
                </value>
                <value>
                    <fullName>AVERAGE</fullName>
                    <label>Consolidation Rate</label>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                    <label>Monthly Average Rate</label>
                </value>
                <value>
                    <fullName>FORECAST</fullName>
                    <label>Forecasting Rate</label>
                </value>
                <value>
                    <fullName>BUDGET</fullName>
                    <label>Budget Rate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Xignite</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FROM_CURRENCY_CODE__c</fullName>
        <label>From Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Currency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using ISO Code</inlineHelpText>
        <label>From Currency Name</label>
        <referenceTo>Currencies__c</referenceTo>
        <relationshipName>ERP_Currency_Daily_Exchange_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_From_date__c</fullName>
        <label>Period From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Month_Year__c</fullName>
        <description>What it Does? Stores month &amp; year for effective date 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <formula>TEXT(MONTH( Effective_Date__c )) &amp; &apos;-&apos; &amp; TEXT(YEAR( Effective_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <label>Period Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_To_Date__c</fullName>
        <label>Period To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TO_CURRENCY_CODE__c</fullName>
        <label>To Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Currency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using ISO Code</inlineHelpText>
        <label>To Currency Name</label>
        <referenceTo>Currencies__c</referenceTo>
        <relationshipName>ERP_Currency_Daily_Exchange_Rate1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <formula>TEXT(EXCHANGE_RATE_TYPE__c)+&apos;_&apos;+FROM_CURRENCY_CODE__c+&apos;_&apos;+TO_CURRENCY_CODE__c+&apos;_&apos;+Text(Effective_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>Currency Exchange Rate</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Rate_Source__c</columns>
        <columns>Status__c</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Exchange_Rates</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Rate_Source__c</columns>
        <columns>Status__c</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXCHANGE_RATE_TYPE__c</field>
            <operation>equals</operation>
            <value>FORECAST</value>
        </filters>
        <filters>
            <field>FROM_CURRENCY_CODE__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <filters>
            <field>TO_CURRENCY_CODE__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>All Exchange Rates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Budget_Rate</fullName>
        <columns>NAME</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>From_Currency_Name__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>To_Currency_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Period_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXCHANGE_RATE_TYPE__c</field>
            <operation>equals</operation>
            <value>BUDGET</value>
        </filters>
        <filters>
            <field>FROM_CURRENCY_CODE__c</field>
            <operation>equals</operation>
            <value>AUD</value>
        </filters>
        <label>Budget Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Daily_Exchange_Rates_Raj</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Rate_Source__c</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>From_Currency_Name__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>To_Currency_Name__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_From_date__c</columns>
        <columns>Period_To_Date__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2018</value>
        </filters>
        <filters>
            <field>EXCHANGE_RATE_TYPE__c</field>
            <operation>equals</operation>
            <value>FORECAST</value>
        </filters>
        <label>Daily Exchange Rates - VES</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_Load</fullName>
        <columns>NAME</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>From_Currency_Name__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>To_Currency_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_Month_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exchange_Rate_Source__c</field>
            <operation>equals</operation>
            <value>User,Bloomberg</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jitendra Jain</value>
        </filters>
        <label>Data Load</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fianance_MDM_L1_Approval_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L1 Approval</label>
        <queue>Finance_MDM_L1_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_CORP_FPA_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM CORP FPA</label>
        <queue>Finance_MDM_CORP_FPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Accounting_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Accounting</label>
        <queue>Finance_MDM_Finance_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Controller_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Controller</label>
        <queue>Finance_MDM_Finance_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L2_Approval_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L2 Approval</label>
        <queue>Finance_MDM_L2_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L3_Approval_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L3 Approval</label>
        <queue>Finance_MDM_L3_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Revenue_Controller_ERP_Currency_Daily_Exchange_Rate</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Revenue Controller</label>
        <queue>Finance_MDM_Revenue_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Raj_Exchange_Rates</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Rate_Source__c</columns>
        <columns>Status__c</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Period_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXCHANGE_RATE_TYPE__c</field>
            <operation>equals</operation>
            <value>AVERAGE,MONTHLY</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/9/2019</value>
        </filters>
        <filters>
            <field>Exchange_Rate_Source__c</field>
            <operation>equals</operation>
            <value>Xignite</value>
        </filters>
        <label>Daily Exchange Rates - Raj</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Rate_Source__c</columns>
        <columns>Status__c</columns>
        <columns>EXCHANGE_RATE_TYPE__c</columns>
        <columns>FROM_CURRENCY_CODE__c</columns>
        <columns>TO_CURRENCY_CODE__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CONVERSION_RATE__c</columns>
        <columns>INTERNAL_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>From_Currency_Name__c</columns>
        <columns>To_Currency_Name__c</columns>
        <columns>Period_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SFDC Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Exchange Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Appropriate_Rate_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
(  !$User.BypassValidationRules__c,
OR( 
TEXT(Exchange_Rate_Source__c) = &apos;User&apos;, 
TEXT(Exchange_Rate_Source__c) = &apos;Bloomberg&apos; 
), 
OR( 
TEXT(EXCHANGE_RATE_TYPE__c) = &apos;DAILY&apos;, 
TEXT(EXCHANGE_RATE_TYPE__c) = &apos;AVERAGE&apos;, 
TEXT(EXCHANGE_RATE_TYPE__c) = &apos;MONTHLY&apos; 
) 
)</errorConditionFormula>
        <errorDisplayField>EXCHANGE_RATE_TYPE__c</errorDisplayField>
        <errorMessage>This Rate Type can&apos;t be selected if Source is User or Bloomberg!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_From_Currency_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, 
NOT(ISNEW()),
ISPICKVAL(Exchange_Rate_Source__c, &apos;Xignite&apos;),

ISCHANGED(From_Currency_Name__c),

NOT(ISCHANGED(FROM_CURRENCY_CODE__c))  

)</errorConditionFormula>
        <errorDisplayField>From_Currency_Name__c</errorDisplayField>
        <errorMessage>Currency can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Source_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c,
ISPICKVAL(PRIORVALUE
(Exchange_Rate_Source__c), 
&apos;Xignite&apos;),
NOT(ISPICKVAL(Exchange_Rate_Source__c, &apos;Xignite&apos;))

)</errorConditionFormula>
        <errorDisplayField>Exchange_Rate_Source__c</errorDisplayField>
        <errorMessage>Source value can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_To_Currency_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 !$User.BypassValidationRules__c,
ISPICKVAL(Exchange_Rate_Source__c, &apos;Xignite&apos;), 

ISCHANGED(To_Currency_Name__c),

NOT(ISCHANGED(TO_CURRENCY_CODE__c))  

)</errorConditionFormula>
        <errorDisplayField>To_Currency_Name__c</errorDisplayField>
        <errorMessage>Currency can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conversion_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  !$User.BypassValidationRules__c,
NOT(ISNEW()),ERP_Currency_Freeze__c , 
OR(

ISCHANGED( EXCHANGE_RATE_TYPE__c ), 
ISCHANGED( Effective_Date__c ), 
ISCHANGED( From_Currency_Name__c ), 
ISCHANGED( To_Currency_Name__c ), 
ISCHANGED( Status__c ), 
ISCHANGED( Exchange_Rate_Source__c ), 
ISCHANGED( Period_Month_Year__c ) 
))</errorConditionFormula>
        <errorMessage>Only Conversion Rate, Average Conversion Rate and Balance Sheet Conv Rate is editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_if_Source_is_Xignite</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, NOT(ISNEW()),TEXT( Exchange_Rate_Source__c ) = &apos;Xignite&apos;)</errorConditionFormula>
        <errorMessage>You are not allowed to make changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_creating_Xignite_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c,ISNEW(),TEXT( Exchange_Rate_Source__c) = &apos;Xignite&apos;, Name = &apos;.&apos;)</errorConditionFormula>
        <errorMessage>You can&apos;t create Currency Exchange Rate for Source Xignite.</errorMessage>
    </validationRules>
</CustomObject>